# solana-data-aggregator

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yaml
.cargo/: config.toml
src/: fetcher.rs  main.rs  server.rs  shutdown.rs
