[package]
name = "solana-data-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["http2"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.29", features = ["derive", "env"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
solana-client = "2.2.0"
solana-rpc-client-api = "2.2.0"
solana-sdk = "2.2.1"
solana-transaction-status-client-types = "2.2.0"
surrealdb = { version = "2.2.0", features = ["kv-mem"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
